# beluga-templates

./: .gitignore  README.md  package.json
templates/python-with-api/: .editorconfig  .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  reset_db.py
templates/python-with-api/alembic/: env.py
templates/python-with-api/app/: main.py
templates/python-with-api/app/core/: logger.py  security.py
templates/python-with-api/app/crud/: token.py  user.py
templates/python-with-api/app/db/: database.py
templates/python-with-api/app/models/: token.py  user.py
templates/python-with-api/app/routers/: token.py  user.py
templates/python-with-api/app/schemas/: token.py  user.py
templates/python-with-api/tests/: test_main.py
templates/tsup/: package.json
